# pysisnotarialerp

./: CONTRIBUTING.md  README.md  example.env  pyproject.toml
src/pysisnotarialerp/: __init__.py  sis_notarial_erp.py
src/pysisnotarialerp/base/: window.py
src/pysisnotarialerp/form/: kardex.py
src/pysisnotarialerp/form/kardex/: controls.py
src/pysisnotarialerp/form/login/: controls.py  exceptions.py  functions.py
src/pysisnotarialerp/forms/_base/: exceptions.py  form.py
src/pysisnotarialerp/forms/kardex/: controls.py  form.py
src/pysisnotarialerp/forms/login/: controls.py  exceptions.py  form.py
src/pysisnotarialerp/forms/main/: controls.py  form.py
src/pysisnotarialerp/models/combo_box/: exceptions.py  model.py
src/pysisnotarialerp/models/kardex/: number.py  type.py
src/pysisnotarialerp/sis_notarial_erp/: controls.py
src/pysisnotarialerp/views/login/: controls.py  exceptions.py  window.py
src/pysisnotarialerp/views/main/: controls.py  window.py
src/sis_notarial_erp/: __init__.py  constants.py  exceptions.py
src/sis_notarial_erp/base/: window.py
src/sis_notarial_erp/helpers/: get_error_messages.py
src/sis_notarial_erp/models/combo_box/: model.py
src/sis_notarial_erp/models/dialog/: exceptions.py  model.py
src/sis_notarial_erp/models/kardex/: type.py
src/sis_notarial_erp/models/public_record/: constants.py  model.py
src/sis_notarial_erp/models/table/: constants.py  model.py
src/sis_notarial_erp/views/login/: controls.py  exceptions.py  window.py
tests/: __init__.py  conftest.py  test_sis_notarial_erp.py
(+13 files in other folders)
