[project]
name = "pysisnotarialerp"
version = "0.8.4"
description = "A Python wrapper for the Sis Notarial ERP desktop application."
authors = [
    {name = "CesarZHX", email = "112836949+CesarZHX@users.noreply.github.com"},
]
dependencies = ["uiautomation>=2.0.29", "pydantic>=2.11.7"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
package-dir = "src"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
]
